# dd-trace-go

./: .checkmake  .env  .gitattributes  .gitignore  .gitlab-ci  .gitlab-ci.yml  .gitmodules  .golangci.yml  .orchestrion-version  .pre-commit-config.yaml  .traefik.yml  AGENTS.md  BUILD.bazel  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  EXTENDED_HEARTBEAT_IMPLEMENTATION.md  FAQ.md  GO-VERSION-ROLLOUT.md  Gopkg.toml  LICENSE  MIGRATING.md  MIGRATION-CONTRACT.md  Makefile  README.md  Rakefile  SECURITY.md  WORKSPACE  apicheck.go  checkcopyright.go  checkmilestone.go  circle.yml  civisibility_exports.go  code-coverage.datadog.yml  codecov.yml  contrib.go.mod  depaware.sh  docker-compose.yaml  docker-compose.yml  get-version.sh  (+33 more)
appsec/: BUILD.bazel  appsec.go  appsec_test.go  appsecv1.go  appsecv1_test.go  batching_test.go  depaware.txt  example_test.go  go.mod  go.sum  version.go
appsec/_test/: appsec_test.go  go.mod  go.sum
appsec/config/: config.go
appsec/dyngo/: events.go  events_test.go  operation.go  operation_test.go
appsec/events/: block.go  block_test.go
appsec/options/: options.go
appsec/types/: types.go
appsec/waf/: example_test.go  rule.go  waf.go
ddtrace/: AGENTS.md  BUILD.bazel  Gopkg.toml  context_test.go  ddtrace.go  ddtrace_gen.go  ddtrace_gen_test.go  example_test.go  git.go  globaltracer.go  globaltracer_test.go  propagating_tags.go  span.go  span_event.go  span_event_msgp.go  span_event_test.go  span_link.go  span_link_msgp.go  span_msgp.go  span_option.go  span_test.go  time.go  time_windows.go  time_windows_test.go  trace.go  user_monitoring.go  v1.go
ddtrace/baggage/: baggage.go  baggage_test.go
ddtrace/dyngoapm/: dyngo.go
ddtrace/env/: env.go
ddtrace/ext/: BUILD.bazel  app_types.go  aws.go  cassandra.go  ci.go  clickhouse.go  db.go  ext_test.go  gcp.go  git.go  log_key.go  messaging.go  os.go  peer.go  platform.go  priority.go  rpc.go  runtime.go  span_kind.go  system.go  tags.go  test_.go  tracer.go
ddtrace/instrumentation/: instrumentation.go  naming_schema.go  packages.go
ddtrace/internal/: BUILD.bazel  globaltracer.go  globaltracer_test.go  v2.go
ddtrace/main/: main.go
ddtrace/mocktracer/: BUILD.bazel  civisibilitymocktracer.go  civisibilitymocktracer_test.go  data_streams.go  example_test.go  main_test.go  mockpayload.go  mockspan.go  mockspan_msgp.go  mockspan_test.go  mockspancontext.go  mockspancontext_test.go  mocktracer.go  mocktracer_test.go
ddtrace/mocktracerv2/: mocktracer.go
ddtrace/opentelemetry/: example_test.go  meter_provider.go  options.go  otel_test.go  propagator.go  propagator_test.go  span.go  span_test.go  telemetry_test.go  tracer.go  tracer_provider.go  tracer_test.go
ddtrace/opentracer/: BUILD.bazel  example_test.go  option.go  span.go  span_test.go  tracer.go  tracer_test.go
ddtrace/tracer/: AGENTS.md  BUILD.bazel  README.md  abandoned_spans.go  abandoned_spans_test.go  abandonedspans.go  abandonedspans_test.go  api.txt  baggage.go  baggage_refactor_test.go  baggage_test.go  binary.go  binary_test.go  civisibility_mocktracer.go  civisibility_nooptracer.go  civisibility_nooptracer_test.go  civisibility_payload.go  civisibility_payload_test.go  civisibility_transport.go  civisibility_transport_test.go  civisibility_truncation.go  civisibility_tslv.go  civisibility_tslv_msgp.go  civisibility_writer.go  civisibility_writer_test.go  context.go  context_test.go  custom_trace_writer.go  data_pipeline.go  data_pipeline_stats.go  data_pipeline_test.go  data_streams.go  data_streams_noprotobuf_test.go  data_streams_test.go  depaware.txt  doc.go  droppedspan.go  droppedspan_test.go  dynamic_config.go  dynamic_config_test.go  (+176 more)
internal/: AGENTS.md  BUILD.bazel  README.md  active_span_key.go  agent.go  agent_test.go  container.go  container_default.go  container_linux.go  container_linux_test.go  container_test.go  env.go  git.go  gitmetadata.go  gitmetadata_test.go  gitmetadatabinary.go  gitmetadatabinary_legacy.go  globaltracer.go  inmemoryfilelinux.go  memstats.go  meta_internal_types.go  meta_struct.go  osinfo_darwin.go  osinfo_default.go  osinfo_freebsd.go  osinfo_linux.go  osinfo_windows.go  otelcontextmapping_linux.go  otelcontextmapping_linux_test.go  statsd.go  statsd_test.go  trace_context.go  trace_context_test.go  trace_source.go  trace_source_test.go  tracer.go  uds.go  uds_test.go  utils.go  utils_test.go  (+1 more)
internal/agent/: discovery.go  discovery_test.go
internal/agentdiscovery/: agentdiscovery.go  agentdiscovery_test.go
internal/apps/: Dockerfile  README.md  apps.go  apps_test.go  docker-compose.yml  go.mod  go.sum  run-scenario.bash  run.bash  scenario_test.go  scenarios_test.go
internal/appsec/: BUILD.bazel  README.md  api.go  api_test.go  appsec.go  appsec_disabled.go  appsec_disabled_test.go  appsec_test.go  batching_test.go  client.go  client_test.go  config.go  config_test.go  dyngo.go  events.go  features.go  limiter.go  limiter_test.go  products.go  remoteconfig.go  remoteconfig_test.go  rule.go  rule_test.go  rules.go  rules.json  rules_manager.go  ruleset_builder.go  ruleset_builder_test.go  telemetry.go  tracerplugin.go  types.go  waf.go  waf_test.go  waf_unit_test.go
internal/atomic/: atomic_gteq_go119.go  atomic_lt_go119.go
internal/bazel/: bazel_test.go  mode.go
internal/bitset/: bitset.go  bitset_test.go
internal/civisibility/: CIVISIBILITY_OVERVIEW.md  SUBTEST_FEATURE_ENABLEMENT_PLAN.md  civisibility.go  civisibility_exports.go
internal/cmpcompress/: README.md  main.go
internal/config/: AGENTS.md  README.md  SOURCE_TAGGED_UNDO_POC.md  (+26 more)
profiler/: AGENTS.md  BUILD.bazel  api.txt  cmemprof.go  collect_capped.go  collect_capped_delta_test.go  collect_capped_test.go  compression.go  compression_test.go  demangle.go  depaware.txt  doc.go  example_test.go  go_lt_1_21.go  goroutineleak_test.go  limiter.go  log.go  metrics.go  metrics_test.go  options.go  options_test.go  orchestrion.tool.go  orchestrion.yml  otelc.yaml  pgo.go  pgo_test.go  profile.go  profile_test.go  profiler.go  profiler_test.go  stack2pprof.go  telemetry.go  telemetry_test.go  upload.go  upload_test.go
(+4436 files in other folders)
