load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tracer",
    srcs = [
        "context.go",
        "doc.go",
        "log.go",
        "metrics.go",
        "option.go",
        "payload.go",
        "propagator.go",
        "rand.go",
        "sampler.go",
        "span.go",
        "span_msgp.go",
        "spancontext.go",
        "stats.go",
        "stats_payload.go",
        "stats_payload_msgp.go",
        "textmap.go",
        "time.go",
        "time_windows.go",
        "tracer.go",
        "tracer_go11.go",
        "tracer_nongo11.go",
        "transport.go",
        "util.go",
        "writer.go",
    ],
    importpath = "gopkg.in/DataDog/dd-trace-go.v1/ddtrace/tracer",
    visibility = ["//visibility:public"],
    deps = [
        "//ddtrace",
        "//ddtrace/ext",
        "//ddtrace/internal",
        "//internal",
        "//internal/appsec",
        "//internal/globalconfig",
        "//internal/log",
        "//internal/osinfo",
        "//internal/samplernames",
        "//internal/traceprof",
        "//internal/version",
        "//vendor/github.com/DataDog/datadog-agent/pkg/obfuscate",
        "//vendor/github.com/DataDog/datadog-go/v5/statsd",
        "//vendor/github.com/DataDog/sketches-go/ddsketch",
        "//vendor/github.com/tinylib/msgp/msgp",
        "//vendor/golang.org/x/time/rate",
        "//vendor/golang.org/x/xerrors",
        "//vendor/google.golang.org/protobuf/proto",
    ] + select({
        "@io_bazel_rules_go//go/platform:windows": [
            "//vendor/golang.org/x/sys/windows",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "tracer_test",
    srcs = [
        "context_test.go",
        "example_test.go",
        "log_test.go",
        "metrics_test.go",
        "option_test.go",
        "payload_test.go",
        "sampler_test.go",
        "span_test.go",
        "spancontext_test.go",
        "stats_test.go",
        "textmap_test.go",
        "time_windows_test.go",
        "tracer_test.go",
        "transport_test.go",
        "util_test.go",
        "writer_test.go",
    ],
    embed = [":tracer"],
    deps = [
        "//ddtrace",
        "//ddtrace/ext",
        "//ddtrace/internal",
        "//internal",
        "//internal/globalconfig",
        "//internal/log",
        "//internal/samplernames",
        "//internal/traceprof",
        "//vendor/github.com/DataDog/datadog-agent/pkg/obfuscate",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/github.com/tinylib/msgp/msgp",
        "//vendor/golang.org/x/time/rate",
    ],
)
