load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = ["log.go"],
    importpath = "gopkg.in/DataDog/dd-trace-go.v1/internal/log",
    visibility = ["//:__subpackages__"],
    deps = [
        "//ddtrace",
        "//internal/version",
    ],
)

go_test(
    name = "log_test",
    srcs = ["log_test.go"],
    embed = [":log"],
    deps = [
        "//ddtrace",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
