load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sarama",
    srcs = [
        "headers.go",
        "option.go",
        "sarama.go",
    ],
    importpath = "gopkg.in/DataDog/dd-trace-go.v1/contrib/Shopify/sarama",
    visibility = ["//visibility:public"],
    deps = [
        "//ddtrace",
        "//ddtrace/ext",
        "//ddtrace/tracer",
        "//internal",
        "//internal/globalconfig",
        "//internal/log",
        "//vendor/github.com/Shopify/sarama",
    ],
)

go_test(
    name = "sarama_test",
    srcs = [
        "example_test.go",
        "sarama_test.go",
    ],
    embed = [":sarama"],
    deps = [
        "//ddtrace/ext",
        "//ddtrace/mocktracer",
        "//ddtrace/tracer",
        "//vendor/github.com/Shopify/sarama",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
