load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pg_v10",
    srcs = [
        "option.go",
        "pg_go.go",
    ],
    importpath = "gopkg.in/DataDog/dd-trace-go.v1/contrib/go-pg/pg.v10",
    visibility = ["//visibility:public"],
    deps = [
        "//ddtrace",
        "//ddtrace/ext",
        "//ddtrace/tracer",
        "//internal",
        "//internal/globalconfig",
        "//internal/log",
        "//vendor/github.com/go-pg/pg/v10:pg",
    ],
)

go_test(
    name = "pg_v10_test",
    srcs = [
        "example_test.go",
        "pg_go_test.go",
    ],
    embed = [":pg_v10"],
    deps = [
        "//ddtrace/ext",
        "//ddtrace/mocktracer",
        "//ddtrace/tracer",
        "//internal/globalconfig",
        "//vendor/github.com/go-pg/pg/v10:pg",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
