load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redis",
    srcs = [
        "option.go",
        "redis.go",
    ],
    importpath = "gopkg.in/DataDog/dd-trace-go.v1/contrib/go-redis/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//ddtrace",
        "//ddtrace/ext",
        "//ddtrace/tracer",
        "//internal",
        "//internal/log",
        "//vendor/github.com/go-redis/redis",
    ],
)

go_test(
    name = "redis_test",
    srcs = [
        "example_test.go",
        "redis_test.go",
    ],
    embed = [":redis"],
    deps = [
        "//ddtrace/ext",
        "//ddtrace/mocktracer",
        "//ddtrace/tracer",
        "//internal/globalconfig",
        "//vendor/github.com/go-redis/redis",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
