load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gocql",
    srcs = [
        "gocql.go",
        "option.go",
    ],
    importpath = "gopkg.in/DataDog/dd-trace-go.v1/contrib/gocql/gocql",
    visibility = ["//visibility:public"],
    deps = [
        "//ddtrace",
        "//ddtrace/ext",
        "//ddtrace/tracer",
        "//internal",
        "//internal/log",
        "//vendor/github.com/gocql/gocql",
    ],
)

go_test(
    name = "gocql_test",
    srcs = [
        "example_test.go",
        "gocql_test.go",
    ],
    embed = [":gocql"],
    deps = [
        "//ddtrace/ext",
        "//ddtrace/mocktracer",
        "//ddtrace/tracer",
        "//internal/globalconfig",
        "//vendor/github.com/gocql/gocql",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
