load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fiber_v2",
    srcs = [
        "fiber.go",
        "option.go",
    ],
    importpath = "gopkg.in/DataDog/dd-trace-go.v1/contrib/gofiber/fiber.v2",
    visibility = ["//visibility:public"],
    deps = [
        "//ddtrace",
        "//ddtrace/ext",
        "//ddtrace/tracer",
        "//internal",
        "//internal/globalconfig",
        "//internal/log",
        "//vendor/github.com/gofiber/fiber/v2:fiber",
    ],
)

go_test(
    name = "fiber_v2_test",
    srcs = [
        "example_test.go",
        "fiber_test.go",
    ],
    embed = [":fiber_v2"],
    deps = [
        "//ddtrace/ext",
        "//ddtrace/mocktracer",
        "//ddtrace/tracer",
        "//internal/globalconfig",
        "//vendor/github.com/gofiber/fiber/v2:fiber",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
